# CV_App_Example

./: README.md  pyproject.toml
src/cv_app_example/: api_client.py  api_client_usage.py  settings.py
src/cv_app_example/notebook/: api_basics.ipynb
tests/: test_api_client.py
